--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,31 @@
 = Kafka-CDI - A simple CDI extension for Apache Kafka
 
-image:https://img.shields.io/travis/aerogear/kafka-cdi/master.svg[Build Status (Travis CI), link=https://travis-ci.org/aerogear/kafka-cdi]
 image:https://img.shields.io/:license-Apache2-blue.svg[License, link=http://www.apache.org/licenses/LICENSE-2.0]
-image:https://img.shields.io/maven-central/v/org.aerogear.kafka/kafka-cdi-extension.svg[Maven Central, link=http://search.maven.org/#search%7Cga%7C1%7Ckafka-cdi-extension]
-image:http://www.javadoc.io/badge/org.aerogear.kafka/kafka-cdi-extension.svg[Javadocs, link=http://www.javadoc.io/doc/org.aerogear.kafka/kafka-cdi-extension]
 
 Making it easy to use Apache Kafka's Java client API in a CDI managed environment!
+
+== Project info
+
+This is a modified fork of link:https://github.com/aerogear/kafka-cdi[Aerogear's Kafka-CDI]. This project is not
+affiliated with Aerogear. Feel free to use the original version.
+
+Note that this extension is still in an proof of concept state and *not* production ready.
+Use without warranty of fitness for any purpose (see license).
+
+=== Motivation
+
+In working with the kafka-cdi extension we found several use cases that did not work out of the box with
+the original extension. Lacking time and effort to get the required changes merged into the upstream
+version, we decided to create a fork to see whether our contributions would actually be useful.
+
+*Added features:*
+
+* Support for *protobuf* (as key and value)
+* *More annotation based configuration* for producers and consumers
+* Better integration with CDI (currently Weld only) enabling a *CDI request scope* for each message delivery
+* Improved *exception handling* and *retries* of message delivery to improve the extension towards production readiness
+* Additional consumer signature to receive a *batch of multiple messages* in a single invocation; the retry mechanism will retry the whole batch in this case
+* Integration with link:https://microprofile.io[microprofile.io] *health*
 
 == Getting started
 
@@ -21,9 +41,9 @@ In a Maven managed project simply the following to your `pom.xml`:
 ----
 ...
   <dependency>
-    <groupId>org.aerogear.kafka</groupId>
+    <groupId>cloud.nxtmobility</groupId>
     <artifactId>kafka-cdi-extension</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.8</version>
   </dependency>
 ...
 ----
